--- a/src/TimeReporting/Pages/Projects/Index.cshtml
+++ b/src/TimeReporting/Pages/Projects/Index.cshtml
@@ -36,7 +36,7 @@
         up-accept-location="/Projects"
         up-on-accepted="up.reload('.projects')"
         class="btn btn-primary d-flex align-items-center gap-2">
-        <i class="bi bi-plus-lg"></i>
+        <i class="bi bi-plus-lg text-light"></i>
         <span>New Project</span>
       </a>
     </div>
