--- a/src/TimeReporting/Pages/Customers/Index.cshtml
+++ b/src/TimeReporting/Pages/Customers/Index.cshtml
@@ -37,7 +37,7 @@
         up-accept-location="/Customers"
         up-on-accepted="up.reload('.customers')"
         class="btn btn-primary d-flex align-items-center gap-2">
-        <i class="bi bi-plus-lg"></i>
+        <i class="bi bi-plus-lg text-light"></i>
         <span>New Customer</span>
       </a>
     </div>
