--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -5,6 +5,8 @@
   <h1>New time entry</h1>
   <hr>
   <form method="post" up-target="main" class="add-entry-form">
+    <input type="hidden" asp-for="FromTimer" />
+    
     <div class="mb-3">
       <label asp-for="NewEntry.ProjectId" class="form-label">Project</label>
       <div class="mb-3 input-group">
