--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
       </li>
     </ul>
   </header>
-  <div class="container-fluid">
+  <div id="content" class="container-fluid">
     <div class="row">
       <div class="sidebar col-md-3 col-lg-2 p-0 bg-body-tertiary vh-100 position-fixed">
         <div class="offcanvas-md offcanvas-end bg-body-tertiary h-100" tabindex="-1" id="sidebarMenu"
