--- a/src/TimeReporting/Pages/Reports/Index.cshtml
+++ b/src/TimeReporting/Pages/Reports/Index.cshtml
@@ -1,4 +1,6 @@
 @page
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model Index
 @{
   Layout = "_Layout";
@@ -96,7 +98,7 @@
                   @timeEntry.Date.ToString("MMMM dd, yyyy")
                 </td>
                 <td>
-                  @if (!User.IsInRole("Admin"))
+                  @if (timeEntry.EmployeeId == User.FindFirstValue(ClaimTypes.NameIdentifier))
                   {
                     <div class="d-flex gap-2 justify-content-end">
                       <a asp-page="Edit"
