--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
   </header>
   <div id="content" class="container-fluid">
     <div class="row">
-      <div class="sidebar col-md-3 col-lg-2 p-0 bg-body-tertiary vh-100 position-fixed">
+      <div class="sidebar col-md-3 col-lg-2 p-0 bg-body-tertiary vh-100 position-fixed z-3">
         <div class="offcanvas-md offcanvas-end bg-body-tertiary h-100" tabindex="-1" id="sidebarMenu"
              aria-labelledby="sidebarMenuLabel">
           <div class="offcanvas-header">
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="col-md-3 col-lg-2"></div>
-      <main role="main" class="col" id="main">
+      <main role="main" class="col-auto w-100" style="padding-left: 60px" id="main">
         @RenderBody()
       </main>
     </div>
