fixed issues with layout and refactor delete entry handler.

--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Create
 
-<section class="container w-100">
+<section class="container">
   <h1>New time entry</h1>
   <hr>
   <form method="post" up-target="main" class="add-entry-form">
