--- a/src/TimeReporting/Pages/Projects/Details.cshtml
+++ b/src/TimeReporting/Pages/Projects/Details.cshtml
@@ -16,7 +16,6 @@
             <p class="card-text">@Model.Project.Description</p>
             <ul class="list-unstyled">
               <li><strong>Customer:</strong> @Model.Project.Customer</li>
-              <li><strong>Status:</strong> <span class="badge bg-success">Active</span></li>
               <li><strong>Total Hours Logged:</strong> @Model.Project.TotalHours</li>
               <li><strong>Total Billed Amount:</strong> @Model.Project.TotalBilledAmount $</li>
             </ul>
@@ -25,10 +24,10 @@
       </section>
       <section>
         <h3 class="h5 mb-3">Latest time entries</h3>
-        <div class="table-responsive">
+        <div class="table-responsive overflow-auto" style="max-height: 300px">
           <table class="table table-hover">
             <thead>
-            <tr>
+            <tr class="position-sticky top-0 border-bottom">
               <th scope="col">Date</th>
               <th scope="col">Employee</th>
               <th scope="col">Work Type</th>
