--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -4,7 +4,7 @@
 <section class="container">
   <h1>New time entry</h1>
   <hr>
-  <form method="post" up-target="main" class="add-entry-form">
+  <form method="post" up-target=".entries" class="add-entry-form">
     <input type="hidden" asp-for="FromTimer" />
     
     <div class="mb-3">
