--- a/src/TimeReporting/Pages/Reports/Edit.cshtml
+++ b/src/TimeReporting/Pages/Reports/Edit.cshtml
@@ -4,7 +4,7 @@
 <section>
   <h1>Edit time entry</h1>
   <hr>
-  <form method="post">
+  <form method="post" up-target=".entries" asp-page="Edit">
     <input type="hidden" asp-for="Entry.Id" />
     
     <div class="mb-3">
