--- a/src/TimeReporting/Pages/Shared/Components/Timer/Default.cshtml
+++ b/src/TimeReporting/Pages/Shared/Components/Timer/Default.cshtml
@@ -87,9 +87,8 @@
              asp-route-fromTimer="true"
              class="btn btn-success rounded-pill"
              up-layer="new modal"
-             up-target="main"
-              up-on-accepted="up.reload('#content')"
-             up-accept-location="/Reports/?*"
+             up-on-accepted="up.reload('#content')"
+             up-accept-location="/Reports"
              up-history="false">
             <i class="bi bi-plus-circle text-light"></i>
           </a>
