--- a/src/TimeReporting/Pages/Projects/Create.cshtml
+++ b/src/TimeReporting/Pages/Projects/Create.cshtml
@@ -5,7 +5,7 @@
    Layout = "_Layout";
 }
 
-<section>
+<section class="container">
   <h2>New Project</h2>
   <hr>
   <form method="post" up-target="main">
