--- a/src/EntreprenadPro/Pages/Shared/_LoginPartial.cshtml
+++ b/src/EntreprenadPro/Pages/Shared/_LoginPartial.cshtml
@@ -30,6 +30,13 @@
               <span class="menu-text ms-2">Kunder</span>
             </a>
           </li>
+          <li class="nav-item fw-bold">
+            <a class="nav-link d-flex align-items-center" asp-page="/Fordon/Index"
+               up-alias="/Fordon/*" up-target="main">
+              <i class="bi bi-truck text-primary ps-1"></i>
+              <span class="menu-text ms-2">Fordon</span>
+            </a>
+          </li>
         </ul>
       </div>
 
