--- a/src/EntreprenadPro/Pages/Shared/_Layout.cshtml
+++ b/src/EntreprenadPro/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
           </div>
         </div>
       </div>
-      <div style="padding-left: 60px">
+      <div class="content-wrapper">
         <main role="main" class="w-100" id="main">
           @RenderBody()
         </main>
@@ -56,15 +56,15 @@ else
 {
   <div id="toast" up-flashes class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
     <div id="liveToast" class="toast show text-bg-@notificationStatus" role="alert" aria-live="assertive"
-      aria-atomic="true" data-bs-delay="5000">
+         aria-atomic="true" data-bs-delay="5000">
       <div class="d-flex">
         <div class="toast-body">
           @notificationMessage
         </div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-          aria-label="Close"></button>
+                aria-label="Close"></button>
       </div>
     </div>
   </div>
 }
-@await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
