--- a/src/EntreprenadPro/Pages/Fordon/Skapa.cshtml
+++ b/src/EntreprenadPro/Pages/Fordon/Skapa.cshtml
@@ -1,4 +1,5 @@
 @page
+@using EntreprenadPro.Helpers
 @model EntreprenadPro.Pages.Fordon.SkapaModel
 
 <section class="container">
@@ -7,17 +8,23 @@
   <form method="post" up-submit>
     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
-    <div class="row mb-3">
-      <div class="col-6">
-        <label asp-for="Vehicle.Type" class="control-label"></label>
-        <select asp-for="Vehicle.Type" class="form-select" asp-items="Html.GetEnumSelectList<VehicleType>()"></select>
-        <span asp-validation-for="Vehicle.Type" class="text-danger"></span>
-      </div>
-      <div class="col-6">
-        <label asp-for="Vehicle.RegistrationNumber" class="control-label"></label>
-        <input asp-for="Vehicle.RegistrationNumber" class="form-control" placeholder="ABC123"/>
-        <span asp-validation-for="Vehicle.RegistrationNumber" class="text-danger"></span>
-      </div>
+    <div class="mb-3">
+      <label asp-for="Vehicle.Type" class="form-label">Typ av fordon</label>
+      <select asp-for="Vehicle.Type" class="form-select" up-switch=".type-dependant"
+              asp-items="@EnumHelper.GetSelectList<VehicleType>()">
+      </select>
+    </div>
+
+    <div class="mb-3 type-dependant" up-hide-for="@VehicleType.Car">
+      <label asp-for="Vehicle.SerialNumber" class="control-label"></label>
+      <input asp-for="Vehicle.SerialNumber" class="form-control" placeholder="1234567890"/>
+      <span asp-validation-for="Vehicle.SerialNumber" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3 type-dependant" up-show-for="@VehicleType.Car">
+      <label asp-for="Vehicle.RegistrationNumber" class="control-label"></label>
+      <input asp-for="Vehicle.RegistrationNumber" class="form-control" placeholder="ABC123"/>
+      <span asp-validation-for="Vehicle.RegistrationNumber" class="text-danger"></span>
     </div>
 
     <div class="row mb-3">
