--- a/src/EntreprenadPro/Pages/Projekt/Skapa.cshtml
+++ b/src/EntreprenadPro/Pages/Projekt/Skapa.cshtml
@@ -1,49 +1,64 @@
 @page
 @model EntreprenadPro.Pages.Projekt.SkapaModel
 
-<section class="container">
-  <h2>Nytt Projekt</h2>
+<section>
+  <h1>Nytt Projekt</h1>
   <hr>
-  <form method="post" up-submit>
-    <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
-    <div class="row mb-3">
-      <div class="col-6">
-        <label asp-for="Project.Name" class="control-label"></label>
-        <input asp-for="Project.Name" class="form-control" placeholder="Projektets namn" autofocus id="Project_Name"/>
-        <span asp-validation-for="Project.Name" class="text-danger"></span>
-      </div>
-      <div class="col-6">
-        <label asp-for="Project.CustomerId" class="control-label"></label>
-        <div class="input-group">
-          <select asp-for="Project.CustomerId" class="form-select customer-selection" id="Project_CustomerId">
-            <option value="">-- Välj kund --</option>
-            @foreach (var customer in Model.Customers)
-            {
-              <option value="@customer.Id">@customer.Name</option>
-            }
-          </select>
-          <a
-            class="btn btn-outline-secondary rounded-end"
-            href="/Kunder/Skapa"
-            up-layer="new modal"
-            up-history="false"
-            up-accept-location="/Kunder"
-            up-on-accepted="up.reload('.customer-selection')">
-            Ny
-          </a>
-        </div>
-        <span asp-validation-for="Project.CustomerId" class="text-danger"></span>
-      </div>
+  <form method="post" up-submit class="needs-validation" novalidate>
+    <div asp-validation-summary="ModelOnly" class="alert alert-danger mb-4"></div>
+
+    <div class="mb-4">
+      <label asp-for="Project.Id" class="form-label"></label>
+      <input asp-for="Project.Id" type="number" class="form-control form-control-lg" placeholder="5497" value=""
+             autofocus id="Project_Id"/>
+      <div class="form-text">Ange ett id frivilligt, annars kommer ett att skapas automatiskt</div>
+      <span asp-validation-for="Project.Name" class="text-danger d-block mt-1"></span>
     </div>
-    <div class="mb-3">
-      <label asp-for="Project.Description" class="control-label"></label>
-      <textarea asp-for="Project.Description" rows="5" cols="100" class="form-control" placeholder="Beskriv projektet"
+
+    <div class="mb-4">
+      <label asp-for="Project.Name" class="form-label"></label>
+      <input asp-for="Project.Name" class="form-control form-control-lg" placeholder="Projektets namn"
+             id="Project_Name"/>
+      <div class="form-text">Ange namnet på projektet</div>
+      <span asp-validation-for="Project.Name" class="text-danger d-block mt-1"></span>
+    </div>
+
+    <div class="mb-4">
+      <label asp-for="Project.CustomerId" class="form-label"></label>
+      <div class="input-group input-group-lg">
+        <select asp-for="Project.CustomerId" class="form-select customer-selection" id="Project_CustomerId">
+          <option value="">-- Välj kund --</option>
+          @foreach (var customer in Model.Customers)
+          {
+            <option value="@customer.Id">@customer.Name</option>
+          }
+        </select>
+        <a
+          class="btn btn-outline-secondary"
+          href="/Kunder/Skapa"
+          up-layer="new modal"
+          up-history="false"
+          up-accept-location="/Kunder"
+          up-on-accepted="up.reload('.customer-selection')">
+          Ny
+        </a>
+      </div>
+      <span asp-validation-for="Project.CustomerId" class="text-danger d-block mt-1"></span>
+    </div>
+
+    <div class="mb-4">
+      <label asp-for="Project.Description" class="form-label"></label>
+      <textarea asp-for="Project.Description" rows="5" class="form-control form-control-lg"
+                placeholder="Beskriv projektet"
                 id="Project_Description"></textarea>
-      <span asp-validation-for="Project.Description" class="text-danger"></span>
+      <div class="form-text">Lägg till en detaljerad beskrivning av projektet</div>
+      <span asp-validation-for="Project.Description" class="text-danger d-block mt-1"></span>
     </div>
+
     @Html.AntiForgeryToken()
-    <div>
-      <input type="submit" value="Skapa projekt" class="btn btn-primary"/>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
+      <a href="/Projekt" class="btn btn-outline-secondary btn-lg flex-fill">Avbryt</a>
+      <input type="submit" value="Skapa projekt" class="btn btn-primary btn-lg flex-fill"/>
     </div>
   </form>
 </section>
