--- a/src/EntreprenadPro/Pages/Shared/_Layout.cshtml
+++ b/src/EntreprenadPro/Pages/Shared/_Layout.cshtml
@@ -8,17 +8,12 @@
 }
 @if (User.Identity is { IsAuthenticated: true })
 {
-  <header class="flex-md-nowrap d-flex z-3 justify-content-end p-0 d-md-none" data-bs-theme="dark">
-    <ul class="navbar-nav flex-row">
-      <li class="nav-item text-nowrap">
-        <button class="nav-link px-3 text-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu"
-                aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="bi bi-list h1"></i>
-        </button>
-      </li>
-    </ul>
-  </header>
-  <div id="content" class="container-fluid">
+  <div id="content" class="container-fluid position-relative">
+    <button class="btn nav-link px-3 text-dark position-absolute top-0 end-0 mt-2 me-1 d-md-none" type="button"
+            data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <i class="bi bi-list h1"></i>
+    </button>
     <div class="row">
       <div class="sidebar p-0 bg-body-tertiary vh-100 position-fixed z-3">
         <div class="offcanvas-md offcanvas-end bg-body-tertiary h-100" tabindex="-1" id="sidebarMenu"
@@ -32,17 +27,18 @@
           </div>
         </div>
       </div>
-      <div class="content-wrapper">
-        <main role="main" class="w-100" id="main">
+      <main role="main" class="pt-2" id="main">
+        <div class="container">
+          <h1>@ViewData["Title"]</h1>
           @RenderBody()
-        </main>
-      </div>
+        </div>
+      </main>
     </div>
   </div>
 }
 else
 {
-  <main class="d-flex justify-content-center align-items-center row">
+  <main>
     @RenderBody()
   </main>
 }
@@ -55,7 +51,7 @@ else
 @if (notificationMessage != null && notificationStatus != null)
 {
   <div id="toast" up-flashes class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
-    <div id="liveToast" class="toast show text-bg-@notificationStatus" role="alert" aria-live="assertive"
+    <div id="liveToast" class="toast show w-100 text-bg-@notificationStatus" role="alert" aria-live="assertive"
          aria-atomic="true" data-bs-delay="5000">
       <div class="d-flex">
         <div class="toast-body">
