Got started on making the time tracking view complete

--- a/src/EntreprenadPro/Pages/Shared/_RootLayout.cshtml
+++ b/src/EntreprenadPro/Pages/Shared/_RootLayout.cshtml
@@ -13,10 +13,10 @@
   <script defer src="~/js/unpoly-scripts.js"></script>
 </head>
 <body id="body">
-    @RenderBody()
+@RenderBody()
 <div id="toast" up-flashes class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;"></div>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
-@await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
 </body>
 </html>
