--- a/src/EntreprenadPro/Pages/Kunder/Details/Index.cshtml
+++ b/src/EntreprenadPro/Pages/Kunder/Details/Index.cshtml
@@ -17,34 +17,38 @@
 }
 else
 {
-  <section>
-    <div>
+  <div>
+    <div class="d-flex justify-content-end">
+      <a class="btn btn-primary" up-target="main" asp-page="/Kunder/Redigera"
+         asp-route-id="@Model.Customer.Id">Ändra <i
+          class="bi bi-pencil-fill"></i></a>
+    </div>
+    <section>
       <div class="mb-3">
         <label asp-for="Customer.Id" class="form-label mb-0"></label>
-        <input type="text" class="form-control form-control-lg" disabled asp-for="Customer.Id"/>
+        <input type="text" class="form-control form-control-lg" readonly asp-for="Customer.Id"/>
       </div>
 
       <div class="mb-3">
         <label asp-for="Customer.Type" class="form-label mb-0"></label>
-        <select asp-for="Customer.Type" disabled class="form-select form-select-lg" up-switch=".type-dependant"
+        <select asp-for="Customer.Type" readonly class="form-select form-select-lg" up-switch=".type-dependant"
                 asp-items="@EnumHelper.GetSelectList<CustomerType>()">
         </select>
       </div>
 
       <div class="mb-3">
         <label asp-for="Customer.Name" class="form-label mb-0"></label>
-        <input asp-for="Customer.Name" disabled class="form-control form-control-lg" placeholder="Anders Bygg"
-               autofocus/>
+        <input asp-for="Customer.Name" readonly class="form-control form-control-lg" placeholder="Anders Bygg"/>
       </div>
 
       <div class="mb-3 type-dependant" up-show-for="@CustomerType.Company">
         <label asp-for="Customer.OrgNumber" class="form-label mb-0"></label>
-        <input asp-for="Customer.OrgNumber" disabled class="form-control form-control-lg" placeholder="560356-0793"/>
+        <input asp-for="Customer.OrgNumber" readonly class="form-control form-control-lg" placeholder="560356-0793"/>
       </div>
 
       <div class="mb-3">
         <label asp-for="Customer.PhoneNumber" class="form-label mb-0"></label>
-        <input asp-for="Customer.PhoneNumber" disabled class="form-control form-control-lg" placeholder="0701234567"/>
+        <input asp-for="Customer.PhoneNumber" readonly class="form-control form-control-lg" placeholder="0701234567"/>
       </div>
 
       <div class="mb-3">
@@ -74,6 +78,6 @@ else
         <label asp-for="Customer.Email" class="form-label mb-0"></label>
         <input asp-for="Customer.Email" disabled class="form-control form-control-lg" placeholder="anders@bygg.se"/>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
 }
