--- a/src/EntreprenadPro/Pages/Kunder/Redigera.cshtml
+++ b/src/EntreprenadPro/Pages/Kunder/Redigera.cshtml
@@ -1,4 +1,5 @@
 @page
+@using EntreprenadPro.Helpers
 @model EntreprenadPro.Pages.Kunder.RedigeraModel
 
 @{
@@ -6,18 +7,70 @@
 }
 
 <section>
-  <h2>Edit Customer</h2>
-  <hr/>
   <form method="post" up-target="main">
+    @Html.AntiForgeryToken()
     <input type="hidden" asp-for="Customer.Id"/>
+    <div class="mb-3">
+      <label asp-for="Customer.Type" class="form-label">Typ</label>
+      <select asp-for="Customer.Type" class="form-select form-select-lg" up-switch=".type-dependant"
+              asp-items="@EnumHelper.GetSelectList<CustomerType>()">
+      </select>
+      <span asp-validation-for="Customer.Type" class="text-danger"></span>
+    </div>
 
     <div class="mb-3">
       <label asp-for="Customer.Name" class="form-label">Namn</label>
-      <input asp-for="Customer.Name" class="form-control"/>
+      <input asp-for="Customer.Name" class="form-control form-control-lg"/>
       <span asp-validation-for="Customer.Name" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Spara</button>
-    @Html.AntiForgeryToken()
+
+    <div class="mb-3 type-dependant" up-show-for="@CustomerType.Company">
+      <label asp-for="Customer.OrgNumber" class="form-label">Organisationsnummer</label>
+      <input asp-for="Customer.OrgNumber" class="form-control form-control-lg"/>
+      <span asp-validation-for="Customer.OrgNumber" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+      <label asp-for="Customer.PhoneNumber" class="form-label">Telefon</label>
+      <input asp-for="Customer.PhoneNumber" class="form-control form-control-lg"/>
+      <span asp-validation-for="Customer.PhoneNumber" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+      <label asp-for="Customer.Address" class="form-label">Adress</label>
+      <input asp-for="Customer.Address" class="form-control form-control-lg"/>
+      <span asp-validation-for="Customer.Address" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+      <label asp-for="Customer.BillingAddress" class="form-label">Fakturaadress</label>
+      <input asp-for="Customer.BillingAddress" class="form-control form-control-lg"/>
+      <span asp-validation-for="Customer.BillingAddress" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3 row">
+      <div class="col-8">
+        <label asp-for="Customer.City" class="form-label">Ort</label>
+        <input asp-for="Customer.City" class="form-control form-control-lg"/>
+        <span asp-validation-for="Customer.City" class="text-danger"></span>
+      </div>
+
+      <div class="col-4">
+        <label asp-for="Customer.PostalCode" class="form-label">Postnummer</label>
+        <input asp-for="Customer.PostalCode" class="form-control form-control-lg"/>
+        <span asp-validation-for="Customer.PostalCode" class="text-danger"></span>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label asp-for="Customer.Email" class="form-label">E‑post</label>
+      <input asp-for="Customer.Email" class="form-control form-control-lg"/>
+      <span asp-validation-for="Customer.Email" class="text-danger"></span>
+    </div>
+
+    <div class="d-flex gap-2">
+      <button type="submit" class="btn btn-primary">Spara</button>
+      <a asp-page="/Kunder/Index" class="btn btn-outline-secondary">Avbryt</a>
+    </div>
   </form>
 </section>
-
